<resources>
    <string name="app_name">Base de données PCIMA /ANJE </string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">AMAMI</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>
    <string name="menu_gallery">Depisatge passif</string>
    <string name="menu_slideshow">Depisatge active</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_depistage_passif_list">DepistagePassifList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main3">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_update_depistag_pasif">UpdateDepistagPasif</string>
    <string name="title_activity_update_depistage">UpdateDepistage</string>
    <string name="title_activity_test">List Activite Mobile</string>
    <string name="title_activity_list_suivisous">ListSuivisous</string>
    <string name="title_activity_list_prisen_charge">ListPrisenCharge</string>
    <string name="title_activity_list_approche">ListApproche</string>
    <string name="title_activity_update_activite_mobile">UpdateActiviteMobile</string>
    <string name="title_activity_update_suivi">updateSuivi</string>
    <string name="title_activity_update_prise">UpdatePrise</string>
    <string name="suivi_sous_surveillance">Suivi sous surveillance</string>
    <string name="passif">Dépistage passif</string>
    <string name="actif">Dépistage actif</string>
    <string name="approche">Approche communautaire</string>
    <string name="compagne">Campagne de dépistage</string>
    <string name="mobil">Activités mobiles</string>
    <string name="prise">Enfants dépistés</string>
    <string name="title_activity_update_approche">UpdateApproche</string>
    <string name="title_activity_stocke_list">StockeList</string>
    <string name="title_activity_gaspa">Gaspa</string>
    <string name="title_activity_list_gaspa">ListGaspa</string>
    <string name="title_activity_intervenant">Intervenant</string>
    <string name="messageSupp">suppresion effectuée avec succés</string>
    <string name="messageSyn">Synchronisation effectué avec succés</string>
    <string name="ajout">Ajout effectué avec succés</string>
    <string name="msgModfier">Modification effectuée avec succés </string>
    <string name="ProblemeConnexion">\"Aucune Connexion Veuillez réessayer plus tard \"</string>
    <string name="ProblemServeur">Echec de récuparation des données</string>
    <string name="title_activity_update_gaspa">UpdateGaspa</string>
    <string name="title_activity_update_stock">UpdateStock</string>
    <string name="MsgSyn">Voulez-Vous  Synchroniser les données </string>
    <string name="Riensyn">les données déja synchroniser</string>
    <string name="ConfirSupp">Voulez-Vous supprimer les donneés</string>
    <string name="ConfirModf">Voulez-Vous modifier les donneés</string>
    <string name="info">information</string>
    <string name="pbmere_mas_f">PBmere MAS F</string>
    <string name="pbmere_mas_g">PBmere MAS G</string>
    <string name="pbmere_mam_f">PBmere MAM F</string>
    <string name="pbmere_mam_g">PBmere MAM G</string>
    <string name="f_mas">F MAS</string>
    <string name="g_mas">G MAS</string>
    <string name="f_mam">F MAM</string>
    <string name="g_mam">G MAM</string>
    <string name="f_bp">F BP</string>
    <string name="g_bp">G BP</string>
    <string name="f_oedeme">F Oedeme</string>
    <string name="g_oedeme">G Oedeme</string>
    <string name="zs_mas_f">Zs MAS F</string>
    <string name="zs_mas_g">Zs MAS G</string>
    <string name="zs_mam_f">Zs MAM F</string>
    <string name="zs_mam_g">Zs MAM G</string>
    <string name="fa_6_23_pres">FA 6-23 Pres.</string>
    <string name="fa_6_23_enr">FA 6-23 Enr.</string>
    <string name="fa_0_6_pres">FA 0-6 Pres.</string>
    <string name="fa_0_6_enr">FA 0-6 Enr.</string>
    <string name="fe_pres">FE Pres.</string>
    <string name="fe_enr">FE Enr.</string>
    <string name="nbr_gaspa">Nbr GASPA</string>
    <string name="intrant">Intrant</string>
    <string name="MsgRed">Les données déjà saisie</string>
</resources>
