<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title=""
        >

        <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/home"

                android:title="Menu" />
        </group>

    </item>
    <item android:title="Dépistage Passif">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/dp"
                    android:icon="@drawable/ic_ddp"
                    android:title="@string/passif" />
                <item
                    android:id="@+id/sss"
                    android:icon="@drawable/ic_suivi_sous_surveillance"
                    android:title="@string/suivi_sous_surveillance" />
                <item
                    android:id="@+id/apc"
                    android:icon="@drawable/ic_pec_com"
                    android:title="@string/approche" />

            </group>
        </menu>
    </item>
    <item android:title="@string/actif">
        <menu>
            <group android:checkableBehavior="single">
             <item
                    android:id="@+id/cdd"
                    android:icon="@drawable/ic_campagne"
                    android:title="@string/compagne" />

                <item
                    android:id="@+id/pen"
                    android:icon="@drawable/ic_pec"
                    android:title="@string/prise" />
                <item
                    android:id="@+id/acm"
                    android:icon="@drawable/ic_activit__mobile"
                    android:title="@string/mobil" />

            </group>
        </menu>
    </item>

    <item android:title="Gestion des intervenants ">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/gaspa"
                android:icon="@drawable/ic_gestion_des_intervenants"
                android:title="Suvi des GASPA" />
                <item
                    android:id="@+id/intervenant"
                    android:icon="@drawable/intevenants"
                    android:title="Intervenants" />
            </group>
        </menu>
        </item>
    <item android:title="Gestion des Intrants">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/stock"
                    android:icon="@drawable/ic_gestion_des_intrants"
                    android:title="Gestion des Intrants " />
            </group>
        </menu>
    </item>

    <item android:title="">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_baseline_login_24"
                    android:title="Déconnecter" />
            </group>
        </menu>
    </item>




</menu>