<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".pcim.Approche_communataire">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:id="@+id/card"
        app:cardElevation="2dp"
        app:cardBackgroundColor="#F5F5F5"
        app:cardCornerRadius="5dp"
        app:contentPadding="10dp"
        >

        <include
            android:id="@+id/header_VIEW"
            layout="@layout/localite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:weightSum="4"
            android:layout_marginTop="@dimen/pading"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:layout_marginLeft="12dp"
                android:text="Localité"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/localite"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="-22dp"
                android:layout_height="match_parent"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/colore"
        android:layout_width="590dp"
        android:layout_height="305dp"
        android:layout_below="@id/card"
        android:layout_marginTop="27dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/lyoutrouge"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/f_mas"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/RougeF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="#FF0000"
                android:textSize="@dimen/label"
                android:textStyle="bold"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/g_mas"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/RougeG"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="#FF0000"
                android:gravity="center"
                android:inputType="number"
                android:textSize="@dimen/label"
                android:textStyle="bold"
                android:maxLength="4"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyoutjaune"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:layout_weight="1"

            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textViewJ"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/f_mam"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/JauneF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="#FFFF00"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="@dimen/label"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/textView19"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/g_mam"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/JauneG"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="#FFFF00"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textStyle="bold"
                android:textSize="@dimen/label" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lyoutvert"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:layout_weight="1"

            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textViewV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/f_bp"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/VertF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:background="#40FF00"
                android:gravity="center"
                android:inputType="number"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/g_bp"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/VertG"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="#40FF00"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="@dimen/label"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lyoutimage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/textViewOdeme"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/f_oedeme"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/odemeF"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="#BBBB"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/g_oedeme"
                android:textSize="@dimen/label"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/odemeG"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:background="#BBBB"
                android:inputType="number"
                android:maxLength="4"
                android:gravity="center"

                android:layout_gravity="center"
                android:textSize="@dimen/label"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/Ajouter"
        android:layout_width="131dp"
        android:layout_height="60dp"
        android:layout_below="@+id/colore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:background="@color/colorPrimary"
        android:text="Ajouter"
        android:textColor="#FFF" />
</RelativeLayout>